Add local debug tips and minimal workflow example to README